--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,12 @@ h4 {
   font-size: 24px;
 }
 
+@media only screen and (max-width: 768px) {
+  h4 {
+    font-size: 20px;
+  }
+}
+
 h5 {
   font-size: 22px;
 }
@@ -457,7 +463,7 @@ footer {
     position: absolute;
     display: block;
     width: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     height: 0px;
     -webkit-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in;
@@ -703,6 +709,10 @@ footer {
   margin-bottom: 50px;
 }
 
+.section7 .section7-pics {
+  height: 100%;
+}
+
 @media only screen and (max-width: 768px) {
   .section7 .section7-pics img {
     width: 100%;
@@ -711,6 +721,17 @@ footer {
 
 .section7 .boxfortwopics {
   width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media only screen and (max-width: 1400px) {
+  .section7 .boxfortwopics {
+    -webkit-box-align: unset;
+        -ms-flex-align: unset;
+            align-items: unset;
+  }
 }
 
 .section7 h2 {
@@ -738,19 +759,16 @@ footer {
 .section7 h4 {
   color: white;
   margin: 20px 0;
-  height: 150px;
 }
 
 @media only screen and (max-width: 768px) {
   .section7 h4 {
-    height: 200px;
     font-size: 20px;
   }
 }
 
 @media only screen and (max-width: 400px) {
   .section7 h4 {
-    height: 250px;
     font-size: 16px;
   }
 }
@@ -1089,7 +1107,7 @@ footer {
 }
 
 .fix-btns {
-  background: #302c2d;
+  background: rgba(48, 44, 45, 0.8);
   color: white;
   position: fixed;
   display: block;
