--- a/src/_main.scss
+++ b/src/_main.scss
@@ -12,6 +12,9 @@ h3{
 }
 h4{
   font-size: 24px;
+  @media only screen and (max-width: 768px)  {
+    font-size: 20px;
+  }
 }
 h5{
   font-size:22px ;
@@ -100,7 +103,7 @@ footer{
     position: absolute;
     display: block;
     width: 100%;
-    background-color: white;
+    background-color: rgba(255,255,255,0.9);
     height: 0px;
     transition: all 0.3s ease-in;
     overflow-y: hidden;
@@ -278,6 +281,9 @@ h4{
     width: 30%;
     margin-bottom: 50px;
   }
+  .section7-pics{
+    height: 100%;
+  }
   .section7-pics img{
       @media only screen and (max-width: 768px)  {
 width: 100%;
@@ -285,6 +291,10 @@ width: 100%;
   }
   .boxfortwopics{
     width: 100%;
+    align-items: center;
+    @media only screen and (max-width: 1400px)  {
+      align-items: unset;
+          }
   }
   h2{
     line-height: 90px;
@@ -303,13 +313,10 @@ width: 100%;
   h4{
     color: white;
     margin: 20px 0;
-    height: 150px;
     @media only screen and (max-width: 768px)  {
-      height: 200px;
       font-size: 20px;
           }
           @media only screen and (max-width: 400px)  {
-      height: 250px;
             font-size: 16px;
                 }
   }
@@ -539,7 +546,7 @@ h5{
   }
 }
 .fix-btns{
-  background: $background-color-grey;
+  background: rgba(48,44,45,0.8);
   color: white;
 position: fixed;
 display: block;
