--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,18 @@ footer {
   width: 100%;
 }
 
+@media only screen and (max-width: 1600px) {
+  .nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .nav > .nav-header {
   display: inline;
 }
@@ -409,6 +421,24 @@ footer {
   display: none;
 }
 
+@media only screen and (min-width: 1600px) {
+  .header-left {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .header-right {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
 .nav > .nav-links {
   display: inline;
   float: right;
@@ -421,12 +451,25 @@ footer {
           align-items: center;
 }
 
+@media only screen and (max-width: 1600px) {
+  .nav > .nav-links {
+    display: unset;
+  }
+}
+
 .nav > .nav-links > a {
+  white-space: nowrap;
   display: inline-block;
   padding: 13px 10px 13px 10px;
   text-decoration: none;
   color: black;
   vertical-align: middle;
+}
+
+@media only screen and (max-width: 1600px) {
+  .nav > .nav-links > a {
+    padding: 10px;
+  }
 }
 
 .nav > .nav-links > a:hover {
