--- a/src/_main.scss
+++ b/src/_main.scss
@@ -36,6 +36,10 @@ footer{
   .logo{
     width: 100%;
   }
+  @media only screen and (max-width:1600px)  {
+   flex-direction: column;
+   align-items: center;
+        }
 }
 
 .nav > .nav-header {
@@ -52,21 +56,43 @@ footer{
 .nav > .nav-btn {
   display: none;
 }
-
+.header-left{
+  @media only screen and (min-width:1600px)  {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+  }
+}
+.header-right{
+  @media only screen and (min-width:1600px)  {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+}
 .nav > .nav-links {
   display: inline;
   float: right;
   font-size: 18px;
   display: flex;
   align-items: center;
+  @media only screen and (max-width:1600px)  {
+    display: unset;
+        }
 }
 
 .nav > .nav-links > a {
+  white-space:nowrap;
   display: inline-block;
   padding: 13px 10px 13px 10px;
   text-decoration: none;
   color: black;
   vertical-align: middle;
+  @media only screen and (max-width:1600px)  {
+    padding: 10px;
+        }
 }
 
 .nav > .nav-links > a:hover {
